pkgs/ndarray/lib/src/ndarray_bindings.dart


@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_tan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_tan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_asin_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_asin_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_acos_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_acos_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atan_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atanh_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_atanh_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_hypot_complex128(
  ffi.Pointer<cpx_t> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<cpx_t> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_hypot_complex64(
  ffi.Pointer<cpx_f_t> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<cpx_f_t> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_pow_complex128(
  ffi.Pointer<cpx_t> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<cpx_t> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_pow_complex64(
  ffi.Pointer<cpx_f_t> x1,
  ffi.Pointer<ffi.Int> stridesX1,
  ffi.Pointer<cpx_f_t> x2,
  ffi.Pointer<ffi.Int> stridesX2,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_conj_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
  )
>()
external void s_conj_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumsum_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Double> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Float> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int64>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_int64(
  ffi.Pointer<ffi.Int64> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int64> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int32>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_int32(
  ffi.Pointer<ffi.Int32> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<ffi.Int32> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_complex128(
  ffi.Pointer<cpx_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<cpx_f_t>,
    ffi.Pointer<ffi.Int>,
    ffi.Pointer<ffi.Int>,
    ffi.Int,
    ffi.Int,
  )
>()
external void s_cumprod_complex64(
  ffi.Pointer<cpx_f_t> src,
  ffi.Pointer<ffi.Int> stridesSrc,
  ffi.Pointer<cpx_f_t> res,
  ffi.Pointer<ffi.Int> stridesRes,
  ffi.Pointer<ffi.Int> shape,
  int rank,
  int axis,
);
